# stt-endpoint

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.allinone  LICENSE  README.md  docker-compose.yml  docker.md  pyproject.toml
app/: Dockerfile  Dockerfile.cuda  auth.py  config.py  logging_config.py  main.py  queue.py  start.sh  stt.py  supervisor.conf
app/routes/: health.py  transcribe.py
auth-service/: .env.example  Dockerfile  README.md  package-lock.json  package.json
auth-service/prisma/: schema.prisma
auth-service/prisma/migrations/20260630050730_init/: migration.sql
auth-service/src/: app.js  index.js
auth-service/src/lib/: env.js  log.js  prisma.js  reset.js  swagger.js  tokens.js
auth-service/src/middleware/: auth.js  csrf.js  rateLimit.js
auth-service/src/routes/: auth.js  transcriptions.js
auth-service/test/: auth.test.js
frontend/: .eslintrc.json  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: Nav.jsx  ProtectedRoute.jsx
frontend/src/lib/: api.js  auth.jsx
frontend/src/pages/: Dashboard.jsx  Docs.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  Register.jsx  ResetPassword.jsx
tests/: conftest.py  test_auth.py  test_health.py  test_transcribe.py
