[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stt-endpoint"
version = "0.1.0"
description = "FastAPI STT microservice wrapping faster-whisper with queue, auth and GPU/CPU fallback"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "MauricioMilano"}]
requires-python = ">=3.11"
keywords = ["stt", "whisper", "fastapi", "speech-to-text"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "faster-whisper>=1.0.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
